--- a/index.html
+++ b/index.html
@@ -8,73 +8,82 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+            integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+            crossorigin="anonymous" />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
         <!--Шапка-->
         <header class="header">
-            <a href="./index.html" lang="en" class="logo">Web<span class="header-studio">Studio</span></a>
-            <nav class="site-nav">
-                <ul class="nav-list">
-                    <li> 
-                        <a href="./index.html" class="nav-link current">Студия</a>
-                    </li>
-                    <li> 
-                        <a href="./portfolio.html" class="nav-link">Портфолио</a>
-                    </li>
-                    <li> 
-                        <a href="#" class="nav-link">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-                <ul class="header-contacts">
-                    <li> 
-                        <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
-                    </li>
-                    <li> 
-                        <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
-                    </li>
-                </ul>
+            <div class="container header-container">
+                <a href="./index.html" lang="en" class="logo">Web<span class="header-studio">Studio</span></a>
+                <nav class="site-nav">
+                    <ul class="nav-list">
+                        <li class="nav-list-item"> 
+                            <a href="./index.html" class="nav-link current">Студия</a>
+                        </li>
+                        <li class="nav-list-item"> 
+                            <a href="./portfolio.html" class="nav-link">Портфолио</a>
+                        </li>
+                        <li class="nav-list-item"> 
+                            <a href="#" class="nav-link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                    <ul class="header-contacts">
+                        <li class="header-contacts-item"> 
+                            <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+                        </li>
+                        <li class="header-contacts-item"> 
+                            <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+            </div>
         </header>
         <!--Уникальная информация-->
         <main class="main">
                 <section class="hero">
+                    <div class="container hero-container">
                     <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
                     <button type="button" class="hero-button">Заказать услугу</button>
+                    </div>
                 </section>
                 <!--Наша особенность-->
-                <section>
+                <section class="section features-section">
                     <h2 hidden>Наша особенность</h2>
-                    <ul class="features-list">
-                        <li class="features-item">
-                            <h3 class="features-header">Внимание к деталям</h3>
-                            <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                        </li>
-                        <li>
-                            <h3 class="features-header">Пунктуальность</h3>
-                            <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                        </li>
-                        <li>
-                            <h3 class="features-header">Планирование</h3>
-                            <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                        </li>
-                        <li>
-                            <h3 class="features-header">Современные технологии</h3>
-                            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                        </li>
-                    </ul>
+                    <div class="container">
+                        <ul class="features-list">
+                            <li class="features-item">
+                                <h3 class="features-header">Внимание к деталям</h3>
+                                <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            </li>
+                            <li class="features-item">
+                                <h3 class="features-header">Пунктуальность</h3>
+                                <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                            </li>
+                            <li class="features-item">
+                                <h3 class="features-header">Планирование</h3>
+                                <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                            </li>
+                            <li>
+                                <h3 class="features-header">Современные технологии</h3>
+                                <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
                 <section class="work">
                     <!-- Чем мы занимаемся-->
                     <h2 class="work-header">Чем мы занимаемся</h2>
                     <ul class="work-list">
-                        <li>
+                        <li class="work-item">
                             <img src="./images/about/about-img-1.jpg" alt="планшет клавиатура стол" width="370" height="294">
                         </li>
-                        <li>
+                        <li class="work-item">
                             <img src="./images/about/about-img-2.jpg" alt="телефон компьютер" width="370" height="294">
                         </li>
-                        <li>
+                        <li class="work-item">
                             <img src="./images/about/about-img-3.jpg" alt="планшет стол клавиатура" width="370" height="294">
                         </li>
                     </ul>
