--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
         <!--Уникальная информация-->
         <main class="main">
                 <section class="hero">
-                    <div class="container hero-container">
                     <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
                     <button type="button" class="hero-button">Заказать услугу</button>
-                    </div>
                 </section>
                 <!--Наша особенность-->
                 <section class="section features-section">
@@ -73,64 +71,79 @@
                         </ul>
                     </div>
                 </section>
+                <!-- Чем мы занимаемся-->
                 <section class="work">
-                    <!-- Чем мы занимаемся-->
-                    <h2 class="work-header">Чем мы занимаемся</h2>
-                    <ul class="work-list">
-                        <li class="work-item">
-                            <img src="./images/about/about-img-1.jpg" alt="планшет клавиатура стол" width="370" height="294">
-                        </li>
-                        <li class="work-item">
-                            <img src="./images/about/about-img-2.jpg" alt="телефон компьютер" width="370" height="294">
-                        </li>
-                        <li class="work-item">
-                            <img src="./images/about/about-img-3.jpg" alt="планшет стол клавиатура" width="370" height="294">
-                        </li>
-                    </ul>
+                     <div class="container">
+                        <h2 class="work-header">Чем мы занимаемся</h2>
+                        <ul class="work-list">
+                            <li class="work-item">
+                                <img src="./images/about/about-img-2.jpg" alt="планшет клавиатура стол" width="370" height="294">
+                            </li>
+                            <li class="work-item">
+                                <img src="./images/about/about-img-3.jpg" alt="телефон компьютер" width="370" height="294">
+                            </li>
+                            <li class="work-item">
+                                <img src="./images/about/about-img-1.jpg" alt="планшет стол клавиатура" width="370" height="294">
+                            </li>
+                        </ul>
+                    </div>
                 </section>
                 <!--Наша команда-->
                 <section class="my-team">
-                    <h2 class="my-team-header">Наша команда</h2>
+                    <div class="container"><h2 class="my-team-header">Наша команда</h2>
                     <ul class="my-team-list">
                         <li class="my-team-item">
                             <img src="./images/team/Ihor.jpg" alt="Мужчина в очках">
-                            <h3 class="my-team-worker">Игорь Демьяненко</h3>
-                            <p lang="en" class="my-team-position">Product Designer</p>
+                                <div class="card-inf">
+                                    <h3 class="my-team-worker">Игорь Демьяненко</h3>
+                                    <p lang="en" class="my-team-position">Product Designer</p>
+                                </div>
                         </li>
                         <li class="my-team-item">
                             <img src="./images/team/Olha.jpg" alt="Женщина в очках">
-                            <h3 class="my-team-worker">Ольга Репина</h3>
-                            <p lang="en" class="my-team-position">Frontend Developer</p>
+                                <div class="card-inf">
+                                   <h3 class="my-team-worker">Ольга Репина</h3>
+                                   <p lang="en" class="my-team-position">Frontend Developer</p>
+                                </div>
                         </li>
                         <li class="my-team-item">
                             <img src="./images/team/Nick.jpg" alt="Мужчина в рубашке">
-                            <h3 class="my-team-worker">Николай Тарасов</h3>
-                            <p lang="en" class="my-team-position">Marketing</p>
+                                <div class="card-inf">
+                                   <h3 class="my-team-worker">Николай Тарасов</h3>
+                                   <p lang="en" class="my-team-position">Marketing</p>
+                                </div>
                         </li>
                         <li class="my-team-item">
                             <img src="./images/team/Misha.jpg" alt="Бородатый мужчина в очках с улыбкой на лице">
-                            <h3 class="my-team-worker">Михаил Ермаков</h3>
-                            <p lang="en" class="my-team-position">UI Designer</p>
+                                <div class="card-inf">
+                                   <h3 class="my-team-worker">Михаил Ермаков</h3>
+                                   <p lang="en" class="my-team-position">UI Designer</p>
+                                </div>
                         </li>
                     </ul>
+                </div>
+
+                   
                 </section>
         </main>
         <!--Футер-->
         <footer class="footer">
-            <a href="./index.html" lang="en" class="logo">Web<span class="footer-studio">Studio</span></a>
-            <address class="address">
-                <ul class="footer-list">
-                    <li>
-                        г. Киев, пр-т Леси Украинки, 26
-                    </li>
-                    <li>
-                        <a href="mailto:info@example.com" class="link">info@example.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="container">
+                <a href="./index.html" lang="en" class="logo footer-logo">Web<span class="footer-studio">Studio</span></a>
+                <address class="address">
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            г. Киев, пр-т Леси Украинки, 26
+                        </li>
+                        <li class="footer-list-item" >
+                            <a href="mailto:info@example.com" class="link">info@example.com</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </footer>
     </body>
 </html>
