--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                 </section>
                 <!--Наша команда-->
                 <section class="my-team">
-                    <div class="container"><h2 class="my-team-header">Наша команда</h2>
+                    <div class="container">
+                        <h2 class="my-team-header">Наша команда</h2>
                     <ul class="my-team-list">
                         <li class="my-team-item">
                             <img src="./images/team/Ihor.jpg" alt="Мужчина в очках">
@@ -122,9 +123,7 @@
                         </li>
                     </ul>
                 </div>
-
-                   
-                </section>
+            </section>
         </main>
         <!--Футер-->
         <footer class="footer">
