--- a/portfolio.html
+++ b/portfolio.html
@@ -47,57 +47,75 @@
                 <div class="container">
                  <h1 hidden>Наши работы </h1>
                     <ul class="filter-list">
-                    <li><button type="button" class="filter-item">Все</button></li>
-                    <li><button type="button" class="filter-item">Веб-сайты</button></li>
-                    <li><button type="button" class="filter-item">Приложения</button></li>
-                    <li><button type="button" class="filter-item">Дизайн</button></li>
-                    <li><button type="button" class="filter-item">Маркетинг</button></li>
+                        <li class="filter-list-item"><button type="button" class="filter-item">Все</button></li>
+                        <li class="filter-list-item"><button type="button" class="filter-item">Веб-сайты</button></li>
+                        <li class="filter-list-item"><button type="button" class="filter-item">Приложения</button></li>
+                        <li class="filter-list-item"><button type="button" class="filter-item">Дизайн</button></li>
+                        <li class="filter-list-item"><button type="button" class="filter-item">Маркетинг</button></li>
                     </ul>
                     <ul class="portfolio-list">
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-1.jpg" alt="Открытый ноут" width="370" height="294">
-                            <h2 class="item-header">Технокряк</h2>
-                            <p class="item-text">Веб-сайт</p>
+                            <div class="portfolio-item-top">
+                                <h2 class="item-header">Технокряк</h2>
+                                <p class="item-text">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-2.jpg" alt="Баскетбол" width="370" height="294">
-                            <h2 lang="en" class="item-header">Постер New Orlean vs Golden Star</h2>
-                            <p class="item-text">Дизайн</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Постер New Orlean vs Golden Star</h2>
+                                <p class="item-text">Дизайн</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-3.jpg" alt="Ресторан" width="370" height="294">
-                            <h2 lang="en" class="item-header">Ресторан Seafood</h2>
-                            <p class="item-text">Приложение</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Ресторан Seafood</h2>
+                                <p class="item-text">Приложение</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-4.jpg" alt="Наушники" width="370" height="294">
-                            <h2 lang="en" class="item-header">Проект Prime</h2>
-                            <p class="item-text">Маркетинг</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Проект Prime</h2>
+                                <p class="item-text">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-5.jpg" alt="Боксы" width="370" height="294">
-                            <h2 lang="en" class="item-header">Проект Boxes</h2>
-                            <p class="item-text">Приложение</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Проект Boxes</h2>
+                                <p class="item-text">Приложение</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-6.jpg" alt="Монитор" width="370" height="294">
-                            <h2 lang="en" class="item-header">Inspiration has no Borders</h2>
-                            <p class="item-text">Веб-сайт</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Inspiration has no Borders</h2>
+                                <p class="item-text">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-7.jpg" alt="Развернутая книга" width="370" height="294">
-                            <h2 lang="en" class="item-header">Издание Limited Edition</h2>
-                            <p class="item-text">Дизайн</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Издание Limited Edition</h2>
+                                <p class="item-text">Дизайн</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
                             <img src="./images/cases/cases-img-8.jpg" alt="Бирка" width="370" height="294">
-                            <h2 lang="en" class="item-header">Проект LAB</h2>
-                            <p class="item-text">Маркетинг</p>
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Проект LAB</h2>
+                                <p class="item-text">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="portfolio-item">
-                        <img src="./images/cases/cases-img-9.jpg" alt="Открытый лептоп" width="370" height="294">
-                        <h2 lang="en" class="item-header">Growing Business</h2>
-                        <p class="item-text">Приложение</p>
+                            <img src="./images/cases/cases-img-9.jpg" alt="Открытый лептоп" width="370" height="294">
+                            <div class="portfolio-item-top">
+                                <h2 lang="en" class="item-header">Growing Business</h2>
+                                <p class="item-text">Приложение</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
